added clear filter button on StopListController

--- a/app/src/main/res/layout/controller_stop_list.xml
+++ b/app/src/main/res/layout/controller_stop_list.xml
@@ -13,68 +13,80 @@
         android:visibility="visible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <EditText
-            android:id="@+id/stop_list_filter"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="72dp"
-            android:hint="@string/filter_by_stop_number_or_name"
-            android:imeOptions="actionDone"
-            android:inputType="text|textNoSuggestions"
-            android:maxLines="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/stop_list_clear_filter"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="HardcodedText" />
-
-        <Button
-            android:id="@+id/stop_list_clear_filter"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@android:drawable/ic_delete"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/stop_list_filter"
-            app:layout_constraintLeft_toRightOf="@id/stop_list_filter"/>
-
         <Space
             android:id="@+id/stop_list_spacer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
+            app:layout_constraintBottom_toTopOf="@+id/stop_list_recycler_view"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stop_list_filter"
-            app:layout_constraintBottom_toTopOf="@+id/stop_list_recycler_view"
-            android:layout_marginBottom="0dp" />
+            app:layout_constraintTop_toBottomOf="@+id/stop_list_filter_container" />
+
+        <RelativeLayout
+            android:id="@+id/stop_list_filter_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="76dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <EditText
+                android:id="@+id/stop_list_filter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/stop_list_clear_filter"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignRight="@+id/stop_list_clear_filter"
+                android:layout_marginEnd="30dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginStart="8dp"
+                android:layout_toEndOf="@+id/stop_list_clear_filter"
+                android:layout_toRightOf="@+id/stop_list_clear_filter"
+                android:hint="@string/filter_by_stop_number_or_name"
+                android:imeOptions="actionDone"
+                android:inputType="text|textNoSuggestions"
+                android:maxLines="1"
+                tools:ignore="HardcodedText" />
+
+
+            <Button
+                android:id="@+id/stop_list_clear_filter"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@android:drawable/ic_delete"
+                android:visibility="visible"
+                tools:ignore="RtlHardcoded" />
+
+
+        </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/stop_list_recycler_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stop_list_spacer"
-            app:layout_constraintBottom_toBottomOf="parent"
-            >
+            app:layout_constraintTop_toBottomOf="@+id/stop_list_filter_container">
 
         </android.support.v7.widget.RecyclerView>
 
-        <!--
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:srcCompat="@android:drawable/ic_dialog_email" />
-            -->
 
     </android.support.constraint.ConstraintLayout>
 
